--- a/Course 1 - Introduction to Deep Learning/Week 2/Digits_classification_Week_IntroDL.ipynb
+++ b/Course 1 - Introduction to Deep Learning/Week 2/Digits_classification_Week_IntroDL.ipynb
@@ -21,11 +21,22 @@
     "colab": {
       "name": "Digits_classification-Week-IntroDL.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hxtruong/HSE-Advanced-ML-Specialization/blob/master/Course%201%20-%20Introduction%20to%20Deep%20Learning/Week%202/Digits_classification_Week_IntroDL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
